--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@ Heli Devine
         </title>
     </head>
     <body>
+        <h1>Heli Devine</h1>
+        <h2>Brave new start in the world of coding</h2>
+        <br>
+        <hr />
+        <h3> About me</h3>
+        <p>Designer, originally from Finland living in Manchester for nearly 20 years in a search for a new direction for my career where I can use my analytical skills and creativity, learn new skills and make the world a bit better place.  </p>
+        <p>Coding as a career ticks all the boxes I’m dreaming to achieve next. Challenging, interesting, truly global and future-proof field of work and welcoming for beginners like me. I started with a few online courses of HTLM and CSS,  reading articles, blog posts and then found Manchester Codes part-time coding course. I’m now fully hooked and very motivated this is the right path for me.  </p>
 
     </body>
 </html>
