added organised list and unorganised list elements

--- a/index.html
+++ b/index.html
@@ -19,6 +19,21 @@ Heli Devine
         <p>Coding as a career ticks all the boxes I’m dreaming to achieve next. Challenging, interesting, truly global and future-proof field of work and welcoming for beginners like me. I started with a few online courses of HTLM and CSS,  reading articles, blog posts and then found Manchester Codes part-time coding course. I’m now fully hooked and very motivated this is the right path for me.  </p>
     </section>
 
+    <h3>Qualities</h3>
+    <ol>
+        <li>Creative</li>
+        <li>Organised</li>
+        <li>Resourceful</li>
+    </ol>
+    <h2>Hobbies and Interests</h2>
+    <ul>
+        <li>Strength training, getting stronger and pushing my limits at gym.</li>
+        <li>Running, swimming, walking and pilates to keep active and reduce stress</li>
+        <li>Design, style & styling, fashion & interiors. </li>
+        <li>Food, travels and adventures, near and far. </li>
+        <li>Reading, politics and learning about world & current events. </li>
+    </ul>
+
     </body>
 </main>
     <footer> 2021 by Heli Devine</footer>
