added information to the pages

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@ Heli Devine
     </head>
     
         <header>porfolio</header>
+        <nav> 
+            <a href=".pages/contact.html" target="_blank">contacts</a>
+            <a href=".pages/projects.html"  target="_blank">projects</a>
+        </nav>
         <main>
     <body>
         <h1>Heli Devine</h1>
@@ -25,7 +29,7 @@ Heli Devine
         <li>Organised</li>
         <li>Resourceful</li>
     </ol>
-    <h2>Hobbies and Interests</h2>
+    <h3>Hobbies and Interests</h3>
     <ul>
         <li>Strength training, getting stronger and pushing my limits at gym.</li>
         <li>Running, swimming, walking and pilates to keep active and reduce stress</li>
