--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@ Heli Devine
     
         <header>porfolio</header>
         <nav> 
-            <a href=".pages/contact.html" target="_blank">contacts</a>
-            <a href=".pages/projects.html"  target="_blank">projects</a>
+            <a href="./pages/contact.html" target="_blank">contacts</a>
+            <a href="./pages/projects.html"  target="_blank">projects</a>
         </nav>
         <main>
     <body>
