--- a/index.html
+++ b/index.html
@@ -11,6 +11,13 @@ Heli Devine
             <a href="./pages/contact.html" target="_blank">contacts</a>
             <a href="./pages/projects.html"  target="_blank">projects</a>
         </nav>
+        <figure>
+            <img src="images/hD_image.jpeg" alt="photo of me, heli devine">
+            <br />
+            <figcaption>
+                Me at train station on my daily commute one day last year.
+            </figcaption>
+        </figure>
         <main>
     <body>
         <h1>Heli Devine</h1>
