--- a/index.html
+++ b/index.html
@@ -27,7 +27,21 @@ Heli Devine
         <section>
         <h3> About me</h3>
         <p>Designer, originally from Finland living in Manchester for nearly 20 years in a search for a new direction for my career where I can use my analytical skills and creativity, learn new skills and make the world a bit better place.  </p>
+    
+            <br>
+            <br>
+        <img src="https://unsplash.com/photos/-BZc9Ee1qo0" alt="dark forest, light illuminated between the trees">
+            <br />
+            <figcaption>
+                quiet happy place: Finnish forest
+            </figcaption> 
         <p>Coding as a career ticks all the boxes I’m dreaming to achieve next. Challenging, interesting, truly global and future-proof field of work and welcoming for beginners like me. I started with a few online courses of HTLM and CSS,  reading articles, blog posts and then found Manchester Codes part-time coding course. I’m now fully hooked and very motivated this is the right path for me.  </p>
+        <br>
+        <img src="https://unsplash.com/photos/g6e641CiHFQ" alt="cup of coffee">
+            <br />
+            <figcaption>
+                ...always more coffee
+            </figcaption> 
     </section>
 
     <h3>Qualities</h3>
