added table to projects page

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -6,4 +6,37 @@ projects
         </title>
     </head>
     <h1>projects</h1>
+
+    <section>projects</section>
+    <br>
+
+    <table>
+    <tr>
+<th>Project</th>
+<th>Description</th>
+<th>Languages learned</th>
+    </tr>
+    <tr>
+        <td>portfolio</td>
+        <td>showcase my work as a developer</td>
+        <td>HTML, CSS</td>
+    </tr>
+    <tr>
+        <td>project 1</td>
+        <td>website</td>
+        <td>HTML, CSS, JavaScript</td>
+    </tr>
+    <tr>
+        <td>project 2</td>
+        <td>something exiting</td>
+        <td>React</td>
+    </tr>
+    <tr>
+        <td>project 3</td>
+        <td>something challenging</td>
+        <td>Python</td>
+    </tr>
+
+
+</table>
     </html>
