added field form elements to the contact page

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -5,5 +5,31 @@
 contact
         </title>
     </head>
-    <h1>contact</h1>
+    <h1>Say Hello!</h1>
+    <p>get in touch</p>
+    <fieldset>
+        <legend>Your Details: </legend>
+        <label>
+            Name:
+            <input type="text" name="name" />
+        </label>
+        <label>
+            Email:
+            <input type="email" value="email" />
+        </label>
+
+    </fieldset>
+    <br>
+    <fieldset>
+        <legend>Reason for contact: </legend>
+        <input type="checkbox" name="reason for contact" value="recruitment" />Recruitment
+        <input type="checkbox" name="reason for contact" value="coding chat" />Coding chat
+        <input type="checkbox" name="reason for contact" value="Just to say hello!" />Just to say hello!
+    </fieldset>
+
+    <br>
+    <fieldset>
+        <legend> Leave your comments</legend>
+        <input type="text" name="comments" />
+    </fieldset>
     </html>
