fixed images path

--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@ Heli Devine
     
             <br>
             <br>
-        <img src="https://unsplash.com/photos/-BZc9Ee1qo0" alt="dark forest, light illuminated between the trees">
+        <img src="./images/finnish forest.jpg" alt="dark forest, light illuminated between the trees">
             <br />
             <figcaption>
                 quiet happy place: Finnish forest
             </figcaption> 
         <p>Coding as a career ticks all the boxes I’m dreaming to achieve next. Challenging, interesting, truly global and future-proof field of work and welcoming for beginners like me. I started with a few online courses of HTLM and CSS,  reading articles, blog posts and then found Manchester Codes part-time coding course. I’m now fully hooked and very motivated this is the right path for me.  </p>
         <br>
-        <img src="https://unsplash.com/photos/g6e641CiHFQ" alt="cup of coffee">
+        <img src="./images/coffee.jpg" alt="cup of coffee">
             <br />
             <figcaption>
                 ...always more coffee
