--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ Heli Devine
             <figcaption>
                 quiet happy place: Finnish forest
             </figcaption> 
-        <p>Coding as a career ticks all the boxes I’m dreaming to achieve next. Challenging, interesting, truly global and future-proof field of work and welcoming for beginners like me. I started with a few online courses of HTLM and CSS,  reading articles, blog posts and then found Manchester Codes part-time coding course. I’m now fully hooked and very motivated this is the right path for me.  </p>
+        <p>Coding as a career ticks all the boxes I\’m dreaming to achieve next. Challenging, interesting, truly global and future-proof field of work and welcoming for beginners like me. I started with a few online courses of HTLM and CSS,  reading articles, blog posts and then found Manchester Codes part-time coding course. I\’m now fully hooked and very motivated this is the right path for me.  </p>
         <br>
         <img src="./images/coffee.jpg" alt="cup of coffee">
             <br />
