trial linking html and css

--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>
+        <link rel="stylesheet" type="text/css" href="./styles.css">
+        
+        <title>    
 Heli Devine
         </title>
     </head>
@@ -10,6 +12,7 @@ Heli Devine
         <nav> 
             <a href="./pages/contact.html" target="_blank">contacts</a>
             <a href="./pages/projects.html"  target="_blank">projects</a>
+            
         </nav>
         <figure>
             <img src="images/hD_image.jpeg" alt="photo of me, heli devine">
