image resizing trial css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <link rel="stylesheet" type="text/css" href="./styles.css">
-        
+
         <title>    
 Heli Devine
         </title>
@@ -15,7 +15,7 @@ Heli Devine
             
         </nav>
         <figure>
-            <img src="images/hD_image.jpeg" alt="photo of me, heli devine">
+            <img id="my image" src="images/hD_image.jpeg" alt="photo of me, heli devine">
             <br />
             <figcaption>
                 Me at train station on my daily commute one day last year.
