--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@ Heli Devine
             
         </nav>
         <figure>
-            <img id="my image" src="images/hD_image.jpeg" alt="photo of me, heli devine">
+            <img id="my-image" src="images/hD_image.jpeg" alt="photo of me, heli devine">
             <br />
             <figcaption>
                 Me at train station on my daily commute one day last year.
@@ -23,7 +23,7 @@ Heli Devine
         </figure>
         <main>
     <body>
-        <h1>Heli Devine</h1>
+        <h1 class=title>Heli Devine</h1>
         <h2>Brave new start in the world of coding</h2>
         <br>
         <hr />
@@ -33,7 +33,7 @@ Heli Devine
     
             <br>
             <br>
-        <img src="./images/finnish forest.jpg" alt="dark forest, light illuminated between the trees">
+        <img id="forest-image"src="./images/finnish forest.jpg" alt="dark forest, light illuminated between the trees">
             <br />
             <figcaption>
                 quiet happy place: Finnish forest
