--- a/index.html
+++ b/index.html
@@ -54,7 +54,6 @@
         <h3>Design</h3>
         <li>Adobe Illustrator</li>
         <li>Adobe Photoshop</li>
-        <li>Figma (<em>coming soon...</em>)</li>
         <li>UX/UI (<em>coming 2022...</em>)</li>
         <li>Hand sketching and drawing</li>
         <li>20 years experience of footwear, fashion and product design, developing & sourcing. <br>
@@ -66,7 +65,9 @@
         <h3>Developer</h3>
         <li>HTML</li>
         <li>CSS</li>
-        <li>JavaScript(<em>coming soon...</em>)</li>
+        <li>JavaScript</li>
+        <li>React</li>
+        <li>NodeJS</li>
         <li>Student at Manchester Codes: Fast Track to Software Engineering</li>
     </ul>
     
